// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders badge 1`] = `
<Text
  allowFontScaling={false}
  numberOfLines={1}
  style={
    [
      {
        "alignSelf": "flex-end",
        "overflow": "hidden",
        "textAlign": "center",
        "textAlignVertical": "center",
      },
      {
        "opacity": 1,
        "transitionDuration": 150,
        "transitionProperty": "opacity",
      },
      {
        "backgroundColor": "rgba(179, 38, 30, 1)",
        "borderRadius": 9999,
        "color": "rgba(255, 255, 255, 1)",
        "height": 6,
        "minWidth": 6,
      },
      false,
      undefined,
    ]
  }
/>
`;

exports[`renders badge as hidden 1`] = `
<Text
  allowFontScaling={false}
  numberOfLines={1}
  style={
    [
      {
        "alignSelf": "flex-end",
        "overflow": "hidden",
        "textAlign": "center",
        "textAlignVertical": "center",
      },
      {
        "opacity": 0,
        "transitionDuration": 150,
        "transitionProperty": "opacity",
      },
      {
        "backgroundColor": "rgba(179, 38, 30, 1)",
        "borderRadius": 9999,
        "color": "rgba(255, 255, 255, 1)",
        "height": 16,
        "minWidth": 16,
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        {
          "lineHeight": 16,
          "maxWidth": 36,
          "paddingHorizontal": 4,
        },
      ],
      undefined,
    ]
  }
>
  3
</Text>
`;

exports[`renders badge in different color 1`] = `
<Text
  allowFontScaling={false}
  numberOfLines={1}
  style={
    [
      {
        "alignSelf": "flex-end",
        "overflow": "hidden",
        "textAlign": "center",
        "textAlignVertical": "center",
      },
      {
        "opacity": 1,
        "transitionDuration": 150,
        "transitionProperty": "opacity",
      },
      {
        "backgroundColor": "rgba(179, 38, 30, 1)",
        "borderRadius": 9999,
        "color": "rgba(255, 255, 255, 1)",
        "height": 16,
        "minWidth": 16,
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        {
          "lineHeight": 16,
          "maxWidth": 36,
          "paddingHorizontal": 4,
        },
      ],
      {
        "backgroundColor": "#f44336",
      },
    ]
  }
>
  3
</Text>
`;

exports[`renders badge with content 1`] = `
<Text
  allowFontScaling={false}
  numberOfLines={1}
  style={
    [
      {
        "alignSelf": "flex-end",
        "overflow": "hidden",
        "textAlign": "center",
        "textAlignVertical": "center",
      },
      {
        "opacity": 1,
        "transitionDuration": 150,
        "transitionProperty": "opacity",
      },
      {
        "backgroundColor": "rgba(179, 38, 30, 1)",
        "borderRadius": 9999,
        "color": "rgba(255, 255, 255, 1)",
        "height": 16,
        "minWidth": 16,
      },
      [
        {
          "fontFamily": "System",
          "fontSize": 11,
          "fontWeight": "500",
          "letterSpacing": 0.5,
          "lineHeight": 16,
        },
        {
          "lineHeight": 16,
          "maxWidth": 36,
          "paddingHorizontal": 4,
        },
      ],
      undefined,
    ]
  }
>
  3
</Text>
`;
